# white-shark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
src/: app.rs  config.rs  constants.rs  error.rs  event_processor.rs  lib.rs  logging.rs  main.rs  state.rs
src/backtest/: engine.rs
src/db/: main.rs  market_data.rs  market_info.rs  mod.rs  models.rs
src/exchanges/: mod.rs  traits.rs
src/exchanges/binance/: client.rs  mod.rs  models.rs
src/exchanges/binance/sbe/: decoder.rs  messages.rs  mod.rs  types.rs  url.rs  utils.rs
src/exchanges/binance/sbe/events/: bid_ask.rs  depth.rs  mod.rs  trade.rs
src/exchanges/kalshi/: api.rs  auth.rs  client.rs  constants.rs  context.rs  handler.rs  market_data.rs  mod.rs  models.rs  orderbook.rs  subscriptions.rs  utils.rs  websocket.rs
src/trader/: constants.rs  executor.rs  main.rs  mod.rs  positions.rs
src/utils/: mod.rs  trade.rs  websocket.rs
