[package]
name = "white-shark"
version = "0.1.0"
edition = "2021"
description = "A trading client for Kalshi and Binance markets"

[lib]
name = "white_shark"
path = "src/lib.rs"

[[bin]]
name = "white-shark"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full", "sync", "macros", "rt-multi-thread"] }

tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"

reqwest = { version = "0.11", features = ["json", "native-tls"] }
http = "1.0"
url = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

zerocopy = { version = "0.7", features = ["derive"] }

rsa = { version = "0.9", features = ["pem", "std", "sha2"] }
rand = "0.8"
pem = "3.0"
sha2 = "0.10"
base64 = "0.21"

chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"
thiserror = "1.0"

dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"

dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
